--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-pdf/renderer": "^3.1.13",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@vercel/og": "^0.5.20",
     "astro": "^3.2.3",
     "astro-icon": "^0.8.1",
     "date-fns": "^2.30.0",
